# S-N_orthopedic_robot

./: README.md
.github/workflows/: robotic_device_tests.yml
apps/: CMakeLists.txt
apps/Autonomous_Carm/autocarm_pelvis_kwire_triangulation/: autocarm_pelvis_kwire_triangulation_main.cpp
apps/Femoroplasty/injection_device_registration/device_multiconfig_singleview/: device_multiconfig_singleview_main.cpp  jhmr_fem_regi_device_multiconfig_singleview_main.cpp
apps/Robotic_Injection_Device/: AGENT_ARCHITECTURE_DASHBOARD.html  DASHBOARDS_README.md  DASHBOARD_GUIDE.md  FINAL_COMPLETION_REPORT.md  FUNCTIONAL_REQUIREMENTS.md  PIPELINE_COVERAGE_100_DASHBOARD.html  PIPELINE_DASHBOARD.html  PIPELINE_FLOW_OVERVIEW.html  TESTING_IMPROVEMENT_DASHBOARD.html  TEST_COVERAGE_DASHBOARD.html  TEST_SUITE_SUMMARY.md
apps/Robotic_Injection_Device/.claude/: settings.local.json
apps/Robotic_Injection_Device/device_bb_pnp/: device_bb_pnp_main.cpp
apps/Robotic_Injection_Device/tests/: CI_CD_SETUP.md  CMakeLists.txt  README.md  REFINEMENT_NOTES.md  SIMULATED_TEST_RESULTS.md  run_tests.sh
apps/Robotic_Injection_Device/tests/dashboard/: README.md  index.html
apps/Robotic_Injection_Device/tests/fixtures/: test_data_generator.cpp  test_data_generator.h  transform_fixtures.cpp  transform_fixtures.h
apps/Robotic_Injection_Device/tests/integration/: test_bb_pnp_workflow.cpp  test_cross_module.cpp  test_handeye_workflow.cpp
apps/Robotic_Injection_Device/tests/mocks/: file_io_mocks.cpp  file_io_mocks.h  xreg_mocks.cpp  xreg_mocks.h
apps/Robotic_Injection_Device/tests/unit/: test_device_bb_pnp_cmdline.cpp  test_device_bb_pnp_coords.cpp  test_device_bb_pnp_fcsv.cpp  test_device_bb_pnp_pnp.cpp  test_edge_cases.cpp  test_error_handling.cpp  test_handeye_cmdline.cpp  test_handeye_conversion.cpp  test_handeye_solver.cpp  test_handeye_validation.cpp  test_pipeline_stages.cpp
lib/basic_math/: xregBasicStats.cpp
lib/bigssMath/: CMakeLists.txt  bigssMath.cpp  bigssMath.h  bigssMathEigen.cpp  bigssMathEigen.h  eigenAddons.h  eigenMatrixAddons.h  interpolatingSpline.cpp  interpolatingSpline.h  smoothingSpline.cpp  smoothingSpline.h  spline.h  test.cpp  testSmoothingSpline.cpp  transformTest.cpp
lib/hip_surgery/: xregHipSegUtils.cpp
